add delay on turn change

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
       <input type="number" name="ammo" id="ammo" min="1" value="1" onchange="changeAmmo()">
     </div>
   </section>
-  <h2 id="turn"></h2>
+  <header class="ship-setter">
+    <h2 id="turn"></h2>
+  </header>
   <section id="game" class="section">
     <section id="areaP1" class="board">
       <section class="ship-setter">
