--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </header>
   <section id="game" class="section">
     <section id="areaP1" class="board">
-      <section class="ship-setter">
+      <section>
         <h3>Player 1 Board</h3>
         <div id="setterP1">
           <select id="p1SelectShip">
@@ -41,7 +41,7 @@
       <div id="board1"></div>
     </section>
     <section id="areaP2" class="board">
-      <section class="ship-setter">
+      <section>
         <h3>Player 2 Board</h3>
         <div id="setterP2">
           <select id="p2SelectShip">
